<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_700"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_opening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/logo_opening" />

        <TextView
            android:id="@+id/tv_selamatdatang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_opening"
            android:layout_marginTop="@dimen/_35sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/selamat_datang"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_opening"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/keterangan"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_opening"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/lab_hardware_dan_software"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            tools:ignore="ObsoleteLayoutParam" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/theme_button_white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_masuk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/login"
                    android:textColor="@color/blue_700"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/theme_button_blue_outline"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_buatakun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/buat_akun_baru"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>