<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_700"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_kembali" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/bg_circle_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/bg_circle_login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10ssp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bg_circle_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_rounded_login"
            android:orientation="vertical"
            android:padding="@dimen/_16ssp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_opening"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/selamat_datang"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_opening"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/keterangan_register"
                android:textSize="@dimen/_10ssp"
                tools:ignore="ObsoleteLayoutParam" />

            <EditText
                android:id="@+id/ed_nim"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_input_text"
                android:drawableStart="@drawable/ic_user_grey"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/nim"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/ed_nama"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text"
                android:drawableStart="@drawable/ic_user_grey"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/nama_lengkap"
                android:inputType="textCapSentences"
                android:paddingStart="10dp"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="Phone"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/passwrod"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/ed_confpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_input_text"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/konfirmasi_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/grey_400"
                android:textSize="@dimen/_12ssp"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/theme_button_blue"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_register_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/registrasi"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Anda tidak memiliki akun?. "
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/btn_masuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/login"
                    android:textColor="@color/blue_700"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>