<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/div_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="NIM"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/ed_nim"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/nim"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/nama_lengkap"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/ed_nama"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/nama_lengkap"
            android:inputType="textCapSentences"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/phone"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/sp_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/theme_button_blue"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <ProgressBar
                    android:id="@+id/progre_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:theme="@style/ProgressBarStyle"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>