<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/div_editext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/ed_nim"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/nim"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/ed_nama"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/nama_lengkap"
            android:inputType="textCapSentences"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/sp_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/sp_agama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/sp_semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp" />

        <LinearLayout
            android:id="@+id/div_praktikum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:visibility="gone">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/sp_praktikum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progres_bar2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/ed_alamat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/alamat"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/ed_namaortu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/nama_ortu"
            android:inputType="textCapSentences"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/ed_pekerjaanortu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/pekerjaan_ortu"
            android:inputType="textCapSentences"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/ed_alamatortu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_input_text"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/alamat_ortu"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingStart="10dp"
            android:textColor="@color/grey_400"
            android:textSize="@dimen/_12ssp"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/div_provinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:visibility="gone">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/sp_provinsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/div_kabupaten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:visibility="gone">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/sp_kabupaten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/theme_button_blue"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_kirim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/kirim"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <ProgressBar
                    android:id="@+id/progre_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:theme="@style/ProgressBarStyle"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>